// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput should render correctly when placeholder provided 1`] = `
<div
  className="PasswordInput"
>
  <input
    onChange={[Function]}
    placeholder="test-placeholder"
    type="password"
    value="test-value"
  />
  <Button
    className="PasswordInput__Button"
    onClick={[Function]}
  >
    <ForwardRef(SvgEye) />
  </Button>
</div>
`;

exports[`PasswordInput should render correctly with required props 1`] = `
<div
  className="PasswordInput"
>
  <input
    onChange={[Function]}
    type="password"
    value="test-value"
  />
  <Button
    className="PasswordInput__Button"
    onClick={[Function]}
  >
    <ForwardRef(SvgEye) />
  </Button>
</div>
`;
